# rust-restapi-crud

./: Cargo.toml  README.md  database.db  test.js
migrations/2022-03-30-213047_create_items_table/: up.sql
src/: config.rs  main.rs  schema.rs
src/handlers/: mats.rs  mod.rs
src/models/: mats.rs
